--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="imagine-dragon-finale.png" class="d-block w-100" >
+            <img src="img/imagine-dragon-finale.png" class="d-block w-100" >
           </div>
           <div class="carousel-item">
-            <img src="mago.png" class="d-block w-100">
+            <img src="img/mago.png" class="d-block w-100">
           </div>
           <div class="carousel-item">
-            <img src="mela.png" class="d-block w-100">
+            <img src="img/mela.png" class="d-block w-100">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
