--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-    <div class="position-fixed py-2 px-3 rounded-pill" id="divDark">
+    <div class="position-fixed py-2 px-3 rounded-pill bg-black text-light" id="divDark">
       <div class="form-check form-switch pull-right">
         <input class="form-check-input" type="checkbox" id="darkMode" onclick="mode()">
         <label id="darkModeLabel" for="darkMode">Light</label>
