api e fix dark mode

--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
+    <p>la temperatura a milano è:</p>
+    <p id='weather-temp'></p>
     <div class="position-fixed py-2 px-3 rounded-pill bg-black text-light" id="divDark">
       <div class="form-check form-switch pull-right">
         <input class="form-check-input" type="checkbox" id="darkMode" onclick="mode()">
@@ -79,6 +81,6 @@
     </div>
   </main>
 </body>
-<script src="js/script.js" type="text/javascript"></script>
-
+<script src="js/darkMode.js" type="text/javascript"></script>
+<script src="js/weather.js" type="text/javascript"></script>
 </html>
