--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     CONTENT="Author: A.N. Author, Illustrator: P. Picture, Category: Books, Price:  £9.24, Length: 784 pages">
   <meta name="robots" content="noindex,nofollow">
 
-  <script src="json/meta.json"></script>
+  <script src="meta.json" type="application/ld+json"></script>
 
 </head>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
