--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="img/imagine-dragon-finale.png" class="d-block w-100 carousel-img">
+          <img src="img/Roma.jpg" class="d-block w-100 carousel-img">
         </div>
         <div class="carousel-item">
-          <img src="img/mago.png" class="d-block w-100 carousel-img">
+          <img src="img/bari.jpg" class="d-block w-100 carousel-img">
         </div>
         <div class="carousel-item">
-          <img src="img/mela.png" class="d-block w-100 carousel-img">
+          <img src="img/firenze.jpg" class="d-block w-100 carousel-img">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -70,9 +70,17 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
+    </div> 
+    <div id="divCities">
+      <div>
+        <h2>Roma</h2>
+        <img src="img/Roma.jpg" class="icon-img">
+        <p id='Roma-temp'></p>
+        <img src="" id="Roma-icon"></div>
+      </div>
     </div>
-    <p>la temperatura a milano è:</p>
-    <p id='weather-temp'></p>
+
+
     <div class="position-fixed py-2 px-3 rounded-pill bg-black text-light" id="divDark">
       <div class="form-check form-switch pull-right">
         <input class="form-check-input" type="checkbox" id="darkMode" onclick="mode()">
